--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
 				"command": "cabinet-node.searchCards",
 				"title": "Search Cabinet Cards",
 				"category": "Cabinet"
+			},
+			{
+				"command": "cabinet-node.showPreview",
+				"title": "Show Preview",
+				"category": "Cabinet"
 			}
 		],
 		"views": {
@@ -40,6 +45,7 @@
 		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
+		"@types/cors": "^2.8.12",
 		"@types/glob": "^7.1.4",
 		"@types/markdown-it": "^12.2.3",
 		"@types/mocha": "^9.0.0",
@@ -54,6 +60,11 @@
 		"typescript": "^4.4.4"
 	},
 	"dependencies": {
+		"@types/express": "^4.17.13",
+		"body-parser": "^1.19.1",
+		"cors": "^2.8.5",
+		"express": "^4.17.2",
+		"follow-redirects": "^1.14.6",
 		"markdown-it": "^12.3.0"
 	}
 }
